tests/compile_fail/on_a_function_with_default_return_type.rs
use caching::caching;

#[caching(key_expr = ())]
fn f() {}

fn main() {}
